# Orbital

./: .gitignore  CMakeLists.txt  CMakePresets.json  Orbital.sln  README.md  Setup.bat  Setup.sh
Content/: GetExampleContent.sh
Editor/: CMakeLists.txt  Camera.cpp  Camera.h  Core.cpp  Core.h  Editor.vcxproj  Editor.vcxproj.filters  Global.h  Main.cpp  MapViewer.cpp  MapViewer.h  Mesh.cpp  Mesh.h  NodeEditor.cpp  NodeEditor.h  NodeEditor.json  Outliner.cpp  PropertyEditor.cpp  PropertyEditor.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  SlamTask.cpp  SlamTask.h  Texture.hpp  Utils.hpp  VideoPreview.cpp  VideoPreview.h  Window.cpp  Window.h  imgui.ini
Editor/Base/: Percentage.hpp  ScopeMutexLock.hpp
Editor/Engine/: CMakeLists.txt  Camera.cpp  Camera.h  CameraController.h  EntityGroup.hpp  FrameTransformation.hpp  Mesh.cpp  Mesh.h  MeshImporter.cpp  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Texture.h  Video.h
Editor/Nodes/: Clip.cpp  Color.cpp  Color.h  FeatureTrack.cpp  FeatureTrack.h  FileNode.cpp  FileNode.h  INode.h  INode.hpp  MapViewNode.cpp  MapViewNode.h  NodeGraph.h  SlamNode.cpp  SlamNode.h  Video.h  VideoPrevNode.cpp  VideoPrevNode.h
Editor/Tasks/: MeshImportTask.cpp  MeshImportTask.h  OpenVslamTask.cpp  OpenVslamTask.h  TaskWorker.cpp  TaskWorker.h  Viso2Task.cpp  Viso2Task.h
Editor/Tracking/: PatternTracker.cpp  README.md
Editor/Triangulation/: CMakeLists.txt
Editor/Views/: IView.hpp  LayoutManager.cpp  LayoutManager.h  MapViewer.cpp  MapViewer.h  NodeEditor.cpp  Outliner.cpp  Outliner.h  PropertyEditor.cpp  PropertyEditor.h  Sequencer.cpp  Sequencer.h  TaskPanel.cpp  TaskPanel.h  Toolbar.cpp  Toolbar.h  VideoPreview.cpp  VideoPreview.h  ViewManager.cpp  ViewManager.h
Editor/Views/NodeEditor/: NodeEditor.cpp  NodeEditor.h  NodeGraph.cpp
Editor/Views/NodeEditor/Nodes/: Clip.h  Video.cpp
Editor/_Triangulation/: Image.h
Engine/: CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  Engine.vcxproj  Engine.vcxproj.filters  EntityGroup.hpp  FrameTransformation.hpp  IEntity.h  Mesh.cpp  Mesh.h  MeshExporter.cpp  MeshExporter.h  MeshImporter.cpp  MeshImporter.h  PrimitiveFactory.cpp  PrimitiveFactory.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.hpp  Video.cpp  Video.h
Engine/Examples/: Main.cpp
Examples/: CMakeLists.txt  Main.cpp
Scripts/: SetupAssimp.sh  SetupDBoW2.sh  SetupEigen3.sh  SetupG2O.sh  SetupImGui.sh  SetupOpenCV.sh  SetupOpenVSLAM.sh  SetupOrbital.sh  SetupVCPKG.sh
Scripts/Windows/: SetupDBoW2.ps1  SetupImGui.ps1  SetupOpenCV.ps1  SetupVCPKG.ps1
Shaders/: MapViewer.fs  MapViewer.vs  Mesh.fs  Mesh.vs  Shaders.cpp  Shaders.vcxproj  Shaders.vcxproj.filters
